Failed attemtp to set keycloak (#1)
* Add Keycloak

* Remove keycloak

* optimize imports