@@ -1,21 +1,25 @@
-package org.trustify.operator.cdrs.v2alpha1;
+package org.trustify.operator.cdrs.v2alpha1.api;
 
 import io.fabric8.kubernetes.api.model.networking.v1.Ingress;
 import io.fabric8.kubernetes.api.model.networking.v1.IngressTLS;
+import io.fabric8.kubernetes.api.model.networking.v1.IngressTLSBuilder;
 import io.javaoperatorsdk.operator.api.reconciler.Context;
 import io.javaoperatorsdk.operator.api.reconciler.dependent.DependentResource;
 import io.javaoperatorsdk.operator.processing.dependent.kubernetes.KubernetesDependent;
+import jakarta.enterprise.context.ApplicationScoped;
 import org.trustify.operator.Constants;
+import org.trustify.operator.cdrs.v2alpha1.Trustify;
+import org.trustify.operator.cdrs.v2alpha1.TrustifySpec;
 import org.trustify.operator.utils.CRDUtils;
 
-import jakarta.enterprise.context.ApplicationScoped;
+import java.util.Collections;
 import java.util.Map;
 
-@KubernetesDependent(labelSelector = ApiIngress.LABEL_SELECTOR, resourceDiscriminator = ApiIngressDiscriminator.class)
+@KubernetesDependent(labelSelector = ApiIngressSecure.LABEL_SELECTOR, resourceDiscriminator = ApiIngressSecureDiscriminator.class)
 @ApplicationScoped
-public class ApiIngress extends ApiIngressBase {
+public class ApiIngressSecure extends ApiIngressBase {
 
-    public static final String LABEL_SELECTOR = "app.kubernetes.io/managed-by=trustify-operator,component=api,component-variant=http";
+    public static final String LABEL_SELECTOR = "app.kubernetes.io/managed-by=trustify-operator,component=api,component-variant=https";
 
     @Override
     @SuppressWarnings("unchecked")
@@ -26,17 +30,15 @@ public class ApiIngress extends ApiIngressBase {
                 getIngressName(cr),
                 Map.of(
                         "component", "api",
-                        "component-variant", "http"
+                        "component-variant", "https"
                 ),
-                Map.of(
-                        "console.alpha.openshift.io/overview-app-route", "true"
-                )
+                Collections.emptyMap()
         );
     }
 
     @Override
-    public boolean isMet(DependentResource<Ingress, Trustify> dependentResource, Trustify cr, Context<Trustify> context) {
-        return context.getSecondaryResource(Ingress.class, new ApiIngressDiscriminator())
+    public boolean isMet(DependentResource<Ingress, Trustify> dependentResource, Trustify primary, Context<Trustify> context) {
+        return context.getSecondaryResource(Ingress.class, new ApiIngressSecureDiscriminator())
                 .map(in -> {
                     final var status = in.getStatus();
                     if (status != null) {
@@ -66,14 +68,19 @@ public class ApiIngress extends ApiIngressBase {
 
     @Override
     protected IngressTLS getIngressTLS(Trustify cr) {
-        return null;
+        String tlsSecretName = CRDUtils.getValueFromSubSpec(cr.getSpec().httpSpec(), TrustifySpec.HttpSpec::tlsSecret)
+                .orElse(null);
+
+        return new IngressTLSBuilder()
+                .withSecretName(tlsSecretName)
+                .build();
     }
 
     public static String getIngressName(Trustify cr) {
-        return cr.getMetadata().getName() + Constants.INGRESS_SUFFIX;
+        return cr.getMetadata().getName() + Constants.INGRESS_SECURE_SUFFIX;
     }
 
     public static String getOpenshiftHostname(Trustify cr, String namespace, String domain) {
-        return namespace + "-" + cr.getMetadata().getName() + "." + domain;
+        return "secure-" + namespace + "-" + cr.getMetadata().getName() + "." + domain;
     }
 }
